--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,16 @@ server.port=8080
 #编码格式
 server.tomcat.uri-encoding=utf-8
 
+#github 相关配置
+github.client.id=d85ef952e55a5e761214
+github.client.secret=3bbf083b6dddcf954f764f2f2d8a5fb8f3d07a8b
+github.redirect.uri=http://localhost:8080/callback
+
+
 #数据库相关配置
-#spring.datasource.url=jdbc:mysql://localhost:3306/sql_test
-#spring.datasource.username=root
-#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=root
 #spring.datasource.max-idle=10
 #spring.datasource.max-wait=10000
 #spring.datasource.min-idle=5
