--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 #应用名称
 spring.application.name=community
+spring.messages.basename=i18n.login
 
 #访问端口号
 server.port=8080
 
 #编码格式
 server.tomcat.uri-encoding=utf-8
+
+spring.thymeleaf.prefix=classpath:/templates/
+
 
 #github 相关配置
 github.client.id=d85ef952e55a5e761214
@@ -22,9 +26,20 @@ spring.datasource.password=root
 #spring.datasource.min-idle=5
 #spring.datasource.initial-size=5
 
+#开启驼峰命名转换
+mybatis.configuration.map-underscore-to-camel-case=true
+
 #session生命周期
 server.servlet.session.timeout=30m
 
-
+# flyway    注：可以完全不用配置
+##  指定数据源，如果没有指定的话，将使用配置的主数据源
+spring.flyway.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+## 用户名
+spring.flyway.user=root
+## 密码
+spring.flyway.password=root
+## 开启，默认开启
+spring.flyway.enabled=true
 
 
