--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.datasource.password=root
 
 #开启驼峰命名转换
 mybatis.configuration.map-underscore-to-camel-case=true
-
+mybatis.mapper-locations=classpath:mapper/*.xml
 #session生命周期
 server.servlet.session.timeout=30m
 
