--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
     <groupId>com.zwy</groupId>
     <artifactId>community</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
     <name>community</name>
     <description>community for Spring Boot</description>
 
@@ -18,19 +20,6 @@
         <java.version>1.8</java.version>
     </properties>
 
-<!--    <profiles>
-        <profile>
-            <id>dev</id>
-            <properties>
-                <db.url>jdbc:h2:~/community</db.url>
-                <db.user>root</db.user>
-                <db.password>root</db.password>
-            </properties>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-    </profiles>-->
 
     <dependencies>
         <dependency>
@@ -57,10 +46,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>-->
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>okhttp</artifactId>
@@ -82,11 +67,6 @@
             <version>1.4.0</version>
         </dependency>
 
-       <!-- <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>1.4.199</version>
-        </dependency>-->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -129,6 +109,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <executable>true</executable>
+                </configuration>
+            </plugin>
+            <!--在这里修改版本-->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.4.3</version>
             </plugin>
             <plugin>
                 <groupId>org.flywaydb</groupId>
@@ -141,18 +130,6 @@
                         <version>8.0.15</version>
                     </dependency>
                 </dependencies>
-                <!--<configuration>
-                    <url>jdbc:mysql://localhost:3306/community?characterEncoding=utf8&amp;useSSL=false&amp;serverTimezone=GMT%2B8</url>
-                    <user>root</user>
-                    <password>root</password>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>mysql</groupId>
-                        <artifactId>mysql-connector-java</artifactId>
-                        <version>8.0.15</version>
-                    </dependency>
-                </dependencies>-->
             </plugin>
             <plugin>
                 <groupId>org.mybatis.generator</groupId>
@@ -167,5 +144,7 @@
                 </dependencies>
             </plugin>
         </plugins>
+
+        <finalName>community_1.1</finalName>
     </build>
 </project>
