--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,15 @@ server.port=8080
 
 #编码格式
 server.tomcat.uri-encoding=utf-8
-#templates配置
+
+#thymeleaf
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+spring.thymeleaf.cache=false
+
 #log 配置
 logging.level.root= info
 logging.level.com.zwy.mapper = debug
@@ -16,20 +23,33 @@ logging.file.max-history=7
 logging.file.max-size=10MB
 logging.file.path=logging
 
-#github 相关配置
-github.client.id=d85ef952e55a5e761214
-github.client.secret=3bbf083b6dddcf954f764f2f2d8a5fb8f3d07a8b
+#github 线上 相关配置
+#github.client.id=d85ef952e55a5e761214
+#github.client.secret=3bbf083b6dddcf954f764f2f2d8a5fb8f3d07a8b
+#github.redirect.uri=http://114.215.208.150:8080/callback
+
+#github 本地 相关配置
+github.client.id=ae08bb7288c532dbaf78
+github.client.secret=13d5c52e3af83d66556ee7f573e06a1628477d9c
 github.redirect.uri=http://localhost:8080/callback
 
+#阿里云 OSS  相关配置
+oss.accessKeyId=LTAI4GK95AhfKyxui78C1KkS
+oss.accessKeySecret=SLLLMMWYDxrDu29d4KKTkEfWRShbYO
+oss.bucketName=zwyz
+oss.filedir=community/publish/img/
+ossendpoint=oss-cn-beijing.aliyuncs.com
 
-#数据库相关配置
-spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
-spring.datasource.username=root
-spring.datasource.password=root
-#spring.datasource.max-idle=10
-#spring.datasource.max-wait=10000
-#spring.datasource.min-idle=5
-#spring.datasource.initial-size=5
+
+#数据库相关配置 （本地数据库）
+#spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+#spring.datasource.username=root
+#spring.datasource.password=root
+
+#数据库相关配置 （阿里云 DMS数据库）
+spring.datasource.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+spring.datasource.username=zwy
+spring.datasource.password=zwy(*)(@#Z
 
 #开启驼峰命名转换
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -39,11 +59,19 @@ server.servlet.session.timeout=30m
 
 # flyway    注：可以完全不用配置
 ##  指定数据源，如果没有指定的话，将使用配置的主数据源
-spring.flyway.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+#spring.flyway.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
+### 用户名
+#spring.flyway.user=root
+### 密码
+#spring.flyway.password=root
+### 开启，默认开启
+#spring.flyway.enabled=true
+
+spring.flyway.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 ## 用户名
-spring.flyway.user=root
+spring.flyway.user=zwy
 ## 密码
-spring.flyway.password=root
+spring.flyway.password=zwy(*)(@#Z
 ## 开启，默认开启
 spring.flyway.enabled=true
 
