--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,23 +33,15 @@ github.client.id=ae08bb7288c532dbaf78
 github.client.secret=13d5c52e3af83d66556ee7f573e06a1628477d9c
 github.redirect.uri=http://localhost:8080/callback
 
-#阿里云 OSS  相关配置
-oss.accessKeyId=LTAI4GK95AhfKyxui78C1KkS
-oss.accessKeySecret=SLLLMMWYDxrDu29d4KKTkEfWRShbYO
-oss.bucketName=zwyz
-oss.filedir=community/publish/img/
-ossendpoint=oss-cn-beijing.aliyuncs.com
-
-
 #数据库相关配置 （本地数据库）
-#spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
-#spring.datasource.username=root
-#spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+spring.datasource.username=root
+spring.datasource.password=root
 
 #数据库相关配置 （阿里云 DMS数据库）
-spring.datasource.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
-spring.datasource.username=zwy
-spring.datasource.password=zwy(*)(@#Z
+#spring.datasource.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#spring.datasource.username=zwy
+#spring.datasource.password=zwy(*)(@#Z
 
 #开启驼峰命名转换
 mybatis.configuration.map-underscore-to-camel-case=true
@@ -58,21 +50,21 @@ mybatis.mapper-locations=classpath:mapper/*.xml
 server.servlet.session.timeout=30m
 
 # flyway    注：可以完全不用配置
-##  指定数据源，如果没有指定的话，将使用配置的主数据源
-#spring.flyway.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
-### 用户名
-#spring.flyway.user=root
-### 密码
-#spring.flyway.password=root
-### 开启，默认开启
-#spring.flyway.enabled=true
-
-spring.flyway.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+#  指定数据源，如果没有指定的话，将使用配置的主数据源
+spring.flyway.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
 ## 用户名
-spring.flyway.user=zwy
+spring.flyway.user=root
 ## 密码
-spring.flyway.password=zwy(*)(@#Z
+spring.flyway.password=root
 ## 开启，默认开启
 spring.flyway.enabled=true
+
+#spring.flyway.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+### 用户名
+#spring.flyway.user=zwy
+### 密码
+#spring.flyway.password=zwy(*)(@#Z
+### 开启，默认开启
+#spring.flyway.enabled=true
 
 
