--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-#Ó¦ÓÃÃû³Æ
+#é¡¹ç›®
 spring.application.name=community
-spring.messages.basename=i18n.login
+#spring.messages.basename=i18n.login
 
-#·ÃÎÊ¶Ë¿ÚºÅ
+#ç«¯å£å·
 server.port=8080
 
-#±àÂë¸ñÊ½
+#ç¼–ç 
 server.tomcat.uri-encoding=utf-8
 
 #thymeleaf
@@ -16,55 +16,50 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.servlet.content-type=text/html
 spring.thymeleaf.cache=false
 
-#log ÅäÖÃ
+#log é…ç½®
 logging.level.root= info
 logging.level.com.zwy.mapper = debug
 logging.file.max-history=7
 logging.file.max-size=10MB
 logging.file.path=logging
 
-#github ÏßÉÏ Ïà¹ØÅäÖÃ
+#github çº¿ä¸Šé…ç½®
 #github.client.id=d85ef952e55a5e761214
 #github.client.secret=3bbf083b6dddcf954f764f2f2d8a5fb8f3d07a8b
 #github.redirect.uri=http://114.215.208.150:8080/callback
 
-#github ±¾µØ Ïà¹ØÅäÖÃ
+#github æœ¬åœ°é…ç½®
 github.client.id=ae08bb7288c532dbaf78
 github.client.secret=13d5c52e3af83d66556ee7f573e06a1628477d9c
 github.redirect.uri=http://localhost:8080/callback
 
-#Êı¾İ¿âÏà¹ØÅäÖÃ £¨±¾µØÊı¾İ¿â£©
+#æ•°æ®åº“æœ¬åœ°ã€èª’ä¹‹
 spring.datasource.url=jdbc:mysql://localhost:3306/community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 
-#Êı¾İ¿âÏà¹ØÅäÖÃ £¨°¢ÀïÔÆ DMSÊı¾İ¿â£©
-#spring.datasource.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+#é˜¿é‡Œäº‘ RDS é…ç½®
+#spring.datasource.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/code_community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
 #spring.datasource.username=zwy
-#spring.datasource.password=zwy(*)(@#Z
+#spring.datasource.password=zwy(*)(@#ZWY666
 
-#¿ªÆôÍÕ·åÃüÃû×ª»»
+#å¼€å¯é©¼å³°
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
-#sessionÉúÃüÖÜÆÚ
+#session è¶…æ—¶æ—¶é—´
 server.servlet.session.timeout=30m
 
-# flyway    ×¢£º¿ÉÒÔÍêÈ«²»ÓÃÅäÖÃ
-#  Ö¸¶¨Êı¾İÔ´£¬Èç¹ûÃ»ÓĞÖ¸¶¨µÄ»°£¬½«Ê¹ÓÃÅäÖÃµÄÖ÷Êı¾İÔ´
+# flyway æœ¬åœ°é…ç½®
 spring.flyway.url=jdbc:mysql://127.0.0.1:3306/community?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&serverTimezone=PRC&useSSL=false
-## ÓÃ»§Ãû
 spring.flyway.user=root
-## ÃÜÂë
 spring.flyway.password=root
-## ¿ªÆô£¬Ä¬ÈÏ¿ªÆô
+## æ˜¯å¦å¼€å¯
 spring.flyway.enabled=true
 
-#spring.flyway.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/community_test?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
-### ÓÃ»§Ãû
+# flyway é˜¿é‡Œäº‘ RDS é…ç½®
+#spring.flyway.url=jdbc:mysql://zwy-strive.mysql.rds.aliyuncs.com:3306/code_community?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 #spring.flyway.user=zwy
-### ÃÜÂë
-#spring.flyway.password=zwy(*)(@#Z
-### ¿ªÆô£¬Ä¬ÈÏ¿ªÆô
+#spring.flyway.password=zwy(*)(@#ZWY666
 #spring.flyway.enabled=true
 
 
